# CS3A_Portfolio_SFML

./: CMakeLists.txt  README.md  main.cpp
Apps/AppDriver/: AppDetail.cpp  AppDetail.h  AppDriver.cpp  AppDriver.h  AppsEnum.h
Apps/BouncingObject/: App_BouncingObject.cpp  App_BouncingObject.h  Ball.cpp  Ball.h  BouncingObject.cpp  BouncingObject.h
Apps/CardApps/Drawables/: DrawableCard.cpp  DrawableCard.h  DrawablePokerHand.cpp  DrawablePokerHand.h
Apps/CardApps/PlayingCard/: App_PlayingCard.cpp  App_PlayingCard.h  PlayingCard.cpp  PlayingCard.h
Apps/CardApps/PokerAnalysis/: Analysis.cpp  Analysis.h  Card.cpp  Card.h  CardHand.cpp  CardHand.h  CardHandScorer.cpp  CardHandScorer.h  Deck.cpp  Deck.h  PokerScore.cpp  PokerScore.h
Apps/CardApps/PokerAnalysisDisplay/: App_PokerAnalysis.cpp  App_PokerAnalysis.h  PokerAnalysisDisplay.cpp  PokerAnalysisDisplay.h
Apps/CardApps/PokerHands/: PokerHands.cpp  PokerHands.h
Apps/CardApps/enums/: ranks.h  scores.h  suits.h
Apps/GameSelector/: AppPreview.cpp  AppPreview.h  App_GameSelector.cpp  App_GameSelector.h  DetailedAppPreview.cpp  DetailedAppPreview.h  GameSelector.cpp  GameSelector.h  Play.cpp  Play.h
Apps/GreenBall/: App_GreenBall.cpp  App_GreenBall.h  GreenBall.cpp  GreenBall.h
Apps/OceanCleanup/: App_OceanCleanup.cpp  App_OceanCleanup.h  OceanCleanup.cpp  OceanCleanup.h  Vessel.cpp  Vessel.h
Apps/OceanCleanup/Trash/: Trash.cpp  Trash.h  TrashGenerator.cpp  TrashGenerator.h
Apps/Pong/: App_Pong.cpp  App_Pong.h  Paddle.cpp  Paddle.h  PingPongBall.cpp  PingPongBall.h  Pong.cpp  Pong.h
Apps/TopHatGuy/: App_TopHatGuy.cpp  App_TopHatGuy.h  topHatGuy.cpp  topHatGuy.h  topHatGuyComponent.cpp  topHatGuyComponent.h
Resources/Application/: AppComponent.h  DisplayableApplication.cpp  DisplayableApplication.h  EventHandleable.h  HomeButton.cpp  HomeButton.h  Updatable.h
Resources/ScrollableContainer/: ScrollEnum.h  ScrollableContainer.cpp  ScrollableContainer.h
Resources/Tools/: Fonts.cpp  Fonts.h  MouseEvents.cpp  MouseEvents.h  Position.cpp  Position.h  States.h
Resources/enums/: FontsEnum.h  statesEnum.h
